--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.0",
@@ -66,6 +67,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@shrutibalasa/tailwind-grid-auto-fit": "^1.1.0",
     "@types/gtag.js": "^0.0.18",
     "@types/node": "^20",
     "@types/react": "^18",
